--- a/po/de.po
+++ b/po/de.po
@@ -5,10 +5,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: shmcat 1.7\n"
+"Project-Id-Version: shmcat 1.8\n"
 "Report-Msgid-Bugs-To: sgdev at arcor dot de\n"
-"POT-Creation-Date: 2016-08-12 17:18+0200\n"
-"PO-Revision-Date: 2014-08-04 10:44+0100\n"
+"POT-Creation-Date: 2016-08-12 18:30+0200\n"
+"PO-Revision-Date: 2016-08-12 18:38+0100\n"
 "Last-Translator: Stefan Gast\n"
 "Language-Team: German\n"
 "Language: de\n"
@@ -44,7 +44,8 @@ msgid ""
 msgstr ""
 "-h, --help               diesen Hilfetext anzeigen und beenden.\n"
 "-?                       das Gleiche wie -h.\n"
-"-S, --stop               sofort anhalten, wenn ein Fehler mit einem Operanden\n"
+"-S, --stop               sofort anhalten, wenn ein Fehler mit einem "
+"Operanden\n"
 "                         auftritt.\n"
 "-V, --version            Versionsinformationen anzeigen und beenden.\n"
 
@@ -57,7 +58,8 @@ msgid ""
 msgstr ""
 "-h             diesen Hilfetext anzeigen und beenden.\n"
 "-?             das Gleiche wie -h.\n"
-"-S             sofort anhalten, wenn ein Fehler mit einem Operanden auftritt.\n"
+"-S             sofort anhalten, wenn ein Fehler mit einem Operanden "
+"auftritt.\n"
 "-V             Versionsinformationen anzeigen und beenden.\n"
 
 #: src/shmcat.c:67
