--- a/po/shmcat.pot
+++ b/po/shmcat.pot
@@ -6,9 +6,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: shmcat 1.8\n"
+"Project-Id-Version: shmcat 1.9\n"
 "Report-Msgid-Bugs-To: sgdev at arcor dot de\n"
-"POT-Creation-Date: 2016-08-12 18:30+0200\n"
+"POT-Creation-Date: 2017-12-15 22:27+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -97,7 +97,7 @@ msgid "If no operand is given, read standard input."
 msgstr ""
 
 #: src/shmcat.c:112
-msgid "Copyright (C) 2012, 2014, 2016 by Stefan Gast"
+msgid "Copyright (C) 2012, 2014, 2016, 2017 by Stefan Gast"
 msgstr ""
 
 #: src/shmcat.c:113 src/ftok.c:87
