--- a/po/de.po
+++ b/po/de.po
@@ -1,5 +1,5 @@
 # German translations for shmcat package.
-# Copyright (C) 2012, 2014, 2016, 2017 Stefan Gast
+# Copyright (C) 2012, 2014, 2016, 2017, 2018 Stefan Gast
 # This file is distributed under the same license as the shmcat package.
 # Stefan Gast, 2012, 2014, 2016, 2017
 #
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: shmcat 1.9\n"
 "Report-Msgid-Bugs-To: sgdev at arcor dot de\n"
 "POT-Creation-Date: 2017-12-15 22:27+0100\n"
-"PO-Revision-Date: 2017-12-15 22:28+0100\n"
+"PO-Revision-Date: 2018-07-10 23:46+0200\n"
 "Last-Translator: Stefan Gast\n"
 "Language-Team: German\n"
 "Language: de\n"
@@ -257,7 +257,7 @@ msgstr "%s: Ungültige Shared-Memory-ID: %s\n"
 #, c-format
 msgid "%s: Cannot open the shared memory segment with the name \"%s\": %s\n"
 msgstr ""
-"%s: Kann das Shared-Memory-Segment mit dem Schlüssel „%s“ nicht öffnen: %s\n"
+"%s: Kann das Shared-Memory-Segment mit dem Name „%s“ nicht öffnen: %s\n"
 
 #: src/shmdumper.c:214
 #, c-format
